Fixed visibility from showing to visible

--- a/des157/studio1/styles.css
+++ b/des157/studio1/styles.css
@@ -274,7 +274,7 @@ input[type=submit]:active {
 }
 
 .showing {
-    visibility: showing;
+    visibility: visible;
     opacity: 1;
 }
 
